code migrated to java 21